small map fixes

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -81,7 +81,7 @@ PB_AME_Authorize_Operation_Musketeer:0 "Greenlight Operation Musketeer"
 PB_AME_Focus_on_Federalistas:0 "Focus on Federalistas"
 PB_AME_Focus_on_Zeledonistas:0 "Focus on Zeledonistas"
 PB_AME_Begrudging_Atlantic_Cooperation:0 "Begrudging Atlantic Cooperation"
-PB_AME_Revolution_with_an_American_France:0 "Revolution with an American France"
+PB_AME_Revolution_with_an_American_France:0 "Revolution with an American Face"
 PB_A_Veneer_of_Federalism:0 "Thin Veneer of Federalism"
 PB_Second_Times_the_Charm:0 "Second Time's the Charm!"
 
@@ -225,6 +225,57 @@ PB_AME_Intensify_Electrification:0 "Bring Light to the Countryside"
 PB_AME_Bureau_of_Technology_and_Science:0 "Bureau of Technology and Science"
 PB_AME_Sign_the_Black_Budget:0 "Sign the Black Budget"
 PB_AME_Form_the_Trinity_Committee:0 "Form the Trinity Committee" 
+
+PB_AME_Alternative_for_Social_America:0 "The Alternative for Social America"
+PB_AME_The_Social_Credit_Experiment:0 "Begin the Social Credit Experiment"
+PB_AME_Combat_the_Discrepancy:0 "Fight the Discrepancy"
+PB_AME_Promote_A_B_Theorem:0 "Promote A + B Theorem"
+PB_AME_Distribution_Based_Economics:0 "Distributive Economics"
+PB_AME_Denounce_Barter_Economics:0 "Denounce Barter Economics"
+PB_AME_Keynesian_Inspiration:0 "Inspiration from Keynes"
+PB_AME_Create_Prosperity_Certificates:0 "Prosperity Certificates"
+PB_AME_Syncretized_Movement:0 "Syncretized Movement"
+PB_AME_National_Stipend:0 "Establish the National Stipend"
+PB_AME_Virgin_Lands_Campaign:0 "The Virgin Lands Campaign"
+PB_AME_Take_on_Imperial_Banking:0 "Take on Imperial Banking"
+PB_AME_Party_for_Working_America:0 "The Party for Working America"
+PB_AME_National_Poverty_Relief:0 "National Poverty Relief"
+PB_AME_Party_for_Modern_America:0 "The Party for Modern America"
+PB_AME_Will_of_the_People:0 "Will of the People"
+PB_AME_Expand_the_Social_Gospel:0 "Expand the Social Gospel"
+PB_AME_Secure_the_Anglois_Vote:0 "Secure the Anglois Vote"
+PB_AME_Cater_to_the_UIU:0 "Cater to the UIU"
+PB_AME_Concede_to_Megaplex_Unions:0 "Concede to the Megaplex Unions"
+PB_AME_Repeal_Anti_Papist_Acts:0 "Repeal Anti-Papist Acts"
+PB_AME_Christian_Credit_Bloc:0 "A Christian-Credit Bloc"
+PB_AME_Promote_Prosperity_Clubs:0 "Promote Prosperity Clubs"
+PB_AME_Under_Vine_and_Fig_Tree:0 "Under their Vine and Fig Tree..."
+PB_AME_Embrace_Nativist_Appeal:0 "Embrace Nativist Appeal"
+PB_AME_Social_Credit_and_Social_Justice:0 "Social Credit and Social Justice"
+PB_AME_Silver_Coughlin:0 "Coughlin's Silver Plan"
+PB_AME_Spirit_of_America_Act:0 "National Origins Act"
+PB_AME_Purity_and_Righteousness:0 "Purity and Righteousness"
+PB_AME_Syncretic_America:0 "A Syncretic America"
+PB_AME_Social_Engineering:0 "Engineer a Social America"
+PB_AME_Promote_Population_Control:0 "Population Control Alternatives"
+PB_AME_Expand_Sociogenetic_Legislation:0 "Expand Sociogenetic Legislation"
+PB_AME_Push_for_Population_Redistribution:0 "Push for Demographic Redistribution"
+PB_AME_Incentivize_Birth_Control:0 "Incentivize Birth Control"
+PB_AME_Crittenden_Remains:0 "Reinforce Crittenden"
+PB_AME_Adress_the_Racial_Issue:0 "Adress the Racial Issue"
+PB_AME_Every_Child_of_God:0 "Every Child of God"
+PB_AME_Maintain_the_Segregation_Doctrine:0 "Maintain Crittenden's Doctrine"
+PB_AME_Bring_the_Technocratic_Solution:0 "Bring the Technocrats!"
+PB_AME_Moral_Augmentation:0 "Allow Moral Augmentation"
+PB_AME_Discourage_Augmentation:0 "Criminalize Steel Disfigurement"
+PB_AME_Limited_Abolition:0 "Limit the Abolitionists"
+PB_AME_National_Alcohol_Ban:0 "National Alcohol Ban"
+PB_AME_Target_the_Masonic_Threat:0 "Target the Masonic Threat"
+PB_AME_Hit_the_Moneychangers:0 "Charge against Moneychangers"
+PB_AME_Love_Thy_Neighbour:0 "Love Thy Neighbour"
+PB_AME_America_as_Christian_Nation:0 "Christian Soul to Nationhood"
+PB_AME_Social_Affairs_Directorate:0 "The Social Affairs Directorate"
+PB_AME_An_American_IBS_Alternative:0 "Homegrown Alternative to IBS"
 
 ##########################
 # PARLIAMENT MECHANICS
