--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -115,7 +115,7 @@
  STRATEGICREGION_115:0 "North East Pacific"
  STRATEGICREGION_116:0 "Iran"
  STRATEGICREGION_117:0 "East Coast"
- STRATEGICREGION_118:0 "California"
+ STRATEGICREGION_118:0 "Cascadia"
  STRATEGICREGION_119:0 "New Mexico"
  STRATEGICREGION_120:0 "Lakota Country"
  STRATEGICREGION_121:0 "Eastern Canada"
