Mexico Event Work 1935
Mexico Event Work 1935 no Loc yet, thatll be next time

--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -135,7 +135,7 @@
   mexico.22.d:0 "WIP"
   mexico.22.a:0 "All In One City?"
 
-  mexico.23.t:0 "Big Boss Captured"
+  mexico.23.t:0 "Mafia Boss Captured"
   mexico.23.d:0 "WIP"
   mexico.23.a:0 "One Down, Many To Go!"
 
@@ -150,3 +150,28 @@
   mexico.26.t:0 "Welcome To Tucson?"
   mexico.26.d:0 "WIP (grestin from future?)"
   mexico.26.a:0 "A Weird Fella?"
+
+  mexico.27.t:0 "Trial Of Damián Rouco"
+  mexico.27.d:0 "WIP (hurricance bob dylan)"
+  mexico.27.a:0 "Seems Fair, Right?"
+
+  mexico.28.t:0 "Oil Struck In Chihuahua"
+  mexico.28.d:0 "WIP"
+  mexico.28.a:0 "True Black Gold!"
+
+  mexico.29.t:0 "German Trade Deal"
+  mexico.29.d:0 "WIP"
+  mexico.29.a:0 "What A Deal!"
+
+  mexico.30.t:0 "Christmas Day Massacre"
+  mexico.30.d:0 "WIP"
+  mexico.30.a:0 "Such Horrors!"
+
+  #1936
+  mexico.31.t:0 ""
+  mexico.31.d:0 "WIP"
+  mexico.31.a:0 ""
+
+  mexico.32.t:0 "Massacre Investigation"
+  mexico.32.d:0 "WIP"
+  mexico.32.a:0 "This Is Outrageous!"
