--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -87,6 +87,9 @@
 
   PB_SCA_Assisting_The_Pacte:0 "Assisting The Pacte"
 
+  PB_SCA_American_Revolutionary_Army:0 "American Revolutionary Army"
+  PB_SCA_American_Revolutionary_Airforce:0 "American Revolutionary Airforce"
+
   ##########################
   # TECHNICAL TEAMS
   ##########################
@@ -603,7 +606,7 @@
   SCA_Wrath_desc:0 ""
 
   SCA_The_Civil_Policing_Act:0 "The Civil Policing Act"
-  SCA_The_Civil_Policing_Act_desc:0 ""
+  SCA_The_Civil_Policing_Act_desc:0 "All across the world, the police force is supposed to be on the right side of the law. Standing as the first and sometimes only line of defence against lawlessness. Despite their noble purpose, it's easy for police to be corrupted by ignorance and Imperialist Rhetoric. We must make sure this cannot and will not happen., Our nations law enforcement will serve to make sure the laws of the state are enforced and nothing less. We will not use it as a force of intimidation or oppression. No one should have to fear a policeman knocking on their door, and with this act no one ever all. They will exist to protect and serve the people!"
 
   SCA_The_Military_Readiness_Act:0 "The Military Readiness Act"
   SCA_The_Military_Readiness_Act_desc:0 "While the revolution is being built up, we cannot ignore the fact that the word of Damocles hangs above us. As we gain strength, each day we risk the Commonwealth deciding to strike us down before we have even had a chance to fight. But if they try to attack, we must ensue that they will face unrelenting resistance. But for that to be possible, the people will need more than fanaticism, they will need training. To this end, we will ensure that all men and women of this fair nation must serve in our armed forces for one year, or at least in military industry or other forms of manual labour in the case of conscientious co-operators. So no matter who comes, they will face not just a nation but a people ready for war."
@@ -727,26 +730,17 @@
   SCA_Establish_The_Interim_Government:0 "Establish The Interim Government"
   SCA_Establish_The_Interim_Government_desc:0 ""
 
-  SCA_The_Union_Debate:0 "The Union Issue"
-  SCA_The_Union_Debate_desc:0 ""
-
-  SCA_The_Naval_Debate:0 "The Naval Issue"
-  SCA_The_Naval_Debate_desc:0 ""
-
-  SCA_The_Industry_Debate:0 "The Industry Issue"
+  SCA_Department_Of_Aeronautics:0 "The American Revolutionary Airforce"
   SCA_The_Industry_Debate_desc:0 ""
 
-  SCA_The_Military_Debate:0 "The Military Issue"
-  SCA_The_Military_Debate_desc:0 ""
+  SCA_Department_Of_Ground_Forces:0 "The American Revolutionary Army"
+  SCA_Department_Of_Ground_Forces_desc:0 ""
 
-  SCA_The_Native_Debate:0 "The Native Issue"
-  SCA_The_Native_Debate_desc:0 ""
+  SCA_Department_Of_Naval_Affairs:0 "The American Revolutionary Navy"
+  SCA_Department_Of_Naval_Affairs_desc:0 ""
 
-  SCA_The_Veterans_Debate:0 "The Veteran Issue"
-  SCA_The_Veterans_Debate_desc:0 ""
-
-  SCA_The_Capital_Question:0 "The Capital Question"
-  SCA_The_Capital_Question_desc:0 ""
+  SCA_The_New_America_Campaign:0 "The New America Campaign"
+  SCA_The_New_America_Campaign_desc:0 ""
 
   SCA_Ministry_Of_The_Exterior:0 "Ministry Of The Exterior"
   SCA_Ministry_Of_The_Exterior_desc:0 ""
@@ -976,6 +970,12 @@
   SCA_The_Military_Readiness_Act_enable:0 "Is allowed to do this decision"
   SCA_The_Property_Ownership_Act_enable:0 "Is allowed to do this decision"
   SCA_The_Seven_Deadly_Sins_enable:0 "Is allowed to do this decision"
+
+  SCA_Department_Of_Ground_Forces_tt:0 "The following §HArmy Command§! spirits can now be removed:\n   - §gCluesless Authority§!\n   - §gDecentralized Planning§!\n   - §gThrow Everything We've Got§!"
+  SCA_Department_Of_Ground_Forces_2_tt:0 "\nAllows for the recruitment of other Chiefs of Army:\n"
+
+  SCA_Department_Of_Aeronautics_tt:0 "The following §HAir Command§! spirits can now be removed:\n   - §gAirforce? Wish We Had One§!\n   - §gHow Do You Fly This Thing?§!"
+  SCA_Department_Of_Aeronautics_2_tt:0 "\nAllows for the recruitment of other Chiefs of Airforce:\n"
 
   ##########################
   # TECH
