Mexico Event LOC1
el Locco fur el megico

--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -120,15 +120,15 @@
   
   #1935
   mexico.19.t:0 "The War On The Mafia"
-  mexico.19.d:0 "WIP"
+  mexico.19.d:0 "It is official. The government is fed up. In a message in the press the government stated that the mafia has crossed the final line. They have now officially declared war on the mafia. Meaning that they will do everything in their power to fight these drunk scum, backwards terrorists and corrupt monsters. Included with the declaration of war was a renewed budget for the police, army and border garrisons. From now on every person crossing any border will be checked, no more loose ends. The police will also more easily be able to intrude on people’s privacy and private property. This was slightly worrying to the population, who haven’t been calmed yet. The government is hoping that with the combination of all these measures that eventually some time soon, Mexico will be beridden of these horrors."
   mexico.19.a:0 "Sons Of Bitches!"
 
   mexico.20.t:0 "La Banda De Neptuno"
-  mexico.20.d:0 "WIP (the band from neptune)"
+  mexico.20.d:0 "Drugs, booze and psychedelic moods. La Banda Di Neptuno has it all. La Banda Di Neptuno or The Band From Neptune, is an up and coming Mexican band who mostly play in clubs or festivals. They are all the rage with the kids, who think the band's music makes them feel free and makes them think about themselves and life more thoroughly. This new found freedom has inspired many teens to start writing their own lyrics or create their own music. They are also liked very much for their deep meaning lyrics, though most of the older folk will blame this on the drugs. The psychedelia and avant-garde feels of the band have attracted many people to go to their concerts and buy their records. They have announced a tour of all of Mexico, and are happy with all the attention. The band has also stated that with the newfound funds they want to innovate even more on future records. Some say this is the beginning of a new era for music and others are more sceptical. Whatever you might think about them, they are staying."
   mexico.20.a:0 "Nice Tunes!"
 
   mexico.21.t:0 "Villa De Cristal Raid"
-  mexico.21.d:0 "WIP"
+  mexico.21.d:0 "It was a cold night, about 3 degrees celsius. Wasn’t much going on around here. The lights were out at Villa De Cristal. They had no idea what was coming.\n\‘Are you ready to move in Squad 1? Over’\n\’We are ready to move in Commander. Over’\n\’Good Squad 1, move in on my command. Over’\n\’Alright, move in Squad 1!’\n\The doors busted open with a loud bang as the troops of squad 1 moved in to secure the villa. The gangsters, overwhelmed by the troops either took cover, were shot or started shooting back. It was a real shooting fest.\n\Then everything calmed down. Was everyone dead? No, quite the contrary. It seems squad 1 had come out victorious, with only losing 1 troop.\n\They quickly arrested any remaining gangsters and started to secure the rest of the villa. The rooms were either empty or ravaged with bullets. That was until they made it to the garage. Cocaine, cocaine everywhere. Must have been about 500 kilos of pure cocaine. All neatly packed and ready for shipping. A victory for the government."
   mexico.21.a:0 "Good Catch!"
 
   mexico.22.t:0 "The Veracruz Arrests"
@@ -148,7 +148,7 @@
   mexico.25.a:0 "What's Happening Up There?"
 
   mexico.26.t:0 "Welcome To Tucson?"
-  mexico.26.d:0 "WIP (grestin from future?)"
+  mexico.26.d:0 "Have you seen this man? White, brunette, about 5’9 and wearing particularly odd clothing. His odd clothing was described as modern or new, looked out of place and kind of like something the British would make. And he seemed to be carrying some sort of small box with colours on it. Appeared outta nowhere in the middle of Tucson a few days ago. He went to a bar and asked for a man named Juba. No one knew who the man was looking for exactly. After asking why the man needed to see this ‘Juba’, the man answered by showing a letter he got from Juba. Showing a date and time which happened to be today on that day. Nuthin unusual till you notice that with the date included is a year, which would surely be unnecessary for any normal letter. The man disappeared after that, causing a bit of trouble when he tried to cook some meat in his hotel room and burned the carpet. He fled quickly from the scene. The police are still clueless about the man's whereabouts and identity, all we have to go off is a small note that fell out of his pocket which said the words ‘stin bode chkpon’, with a bunch of white bits between the letter. Nobody knows what it means."
   mexico.26.a:0 "A Weird Fella?"
 
   mexico.27.t:0 "Trial Of Damián Rouco"
