Another fat SCA update

--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -583,7 +583,7 @@
   SCA_The_Gender_Equality_Act_desc:0 "All men are created equal." These were the words our forefathers used, the promises they made to the people of what were then the 13 Colonies. But despite their best of intentions, even this very promise is flawed. For it discounts half the global population, women were created equal too! For decades they were forced to remain at home, serving their husbands with little say in the affairs of the world. Even some of the towns of the West where women have a degree of power, their only oppitunity to get it was through prostitution. We will fix this injustice, from this day forward it will not longer be "all men are created equal", now it shall be this: "All people are created equal!"
 
   SCA_Gluttony:0 "Gluttony"
-  SCA_Gluttony_desc:0 ""
+  SCA_Gluttony_desc:0 "The Sin of Gluttony is practically the definition of Imperialism. Not just the Empires of Europe gorging themselves on every corner of the Earth, but also the nobles and Imperial royal families taking food and money from those who need it. Practically stuffing themselves on the suffering for others. We cannot allow this tumour to fester within our nation's soul. Everyone will be given what they need, no more no less. No one can be gluttonous if they can only get what they need."
 
   SCA_The_Fair_Meal_Act:0 "The Fair Meal Act"
   SCA_The_Fair_Meal_Act_desc:0 "Because of the lacking economic power of the state and the chance of crop failure, we have decided to introduce a program similar to the Elizabethan Poor Rate. Meaning that people who may not be able to afford necessities such as food, water and clothing, get it free from the state under the condition that they live in Urban areas or close too it. These actions should ensure that the people are less likely too revolt or protest, as now most of the population should have a stead access to human necessities. Together with this in the program are included, several state funded subsidies for the agricultural sector and for any fishing or meat producing companies."
@@ -592,16 +592,16 @@
   SCA_The_Physical_Standards_Act_desc:0 "In our current situation, we need as many of our citizens as possible to be physically fit and able. Not only for the wellbeing of the people, but also to create the ideal fighting force for when we liberate the East Coast. But more and more people grow lazy, listening to the radio or reading newspapers instead of going outside and exercising. While it is understand to not want to exercise all day every day, we still need a health standard for the entire nation. To this end, we will mandate sports and youth clubs for all men and women of this fair nation. With only those who are physically incapable of doing so being granted an exception."
 
   SCA_Greed:0 "Greed"
-  SCA_Greed_desc:0 ""
+  SCA_Greed_desc:0 "The Sin of Greed, much like Gluttony, is a symptom of Imperialist sentiment. While on a national level, this is a leader's greed for power, land and the forceful admiration of his people, the local level is just as insidious. Hoarding money creates the separation of classes, which creates classism and economic segregation. Greed causes us take from those who need it, we cannot allow this to happen. Everyone will be given what they need in terms of property, remove the landowner class, and make sure everyone can earn what they need. Preventing the hoarding of wealth. Greed is perhaps our greatest enemy, we must work twice as hard to remove it. "
 
   SCA_The_Minimum_Allowance_Act:0 "The Minimum Allowance Act"
   SCA_The_Minimum_Allowance_Act_desc:0 ""
 
   SCA_The_Property_Ownership_Act:0 "The Property Ownership Act"
-  SCA_The_Property_Ownership_Act_desc:0 ""
+  SCA_The_Property_Ownership_Act_desc:0 "When forming a new nation, we must ensure the corruption of the past will not return. One issue we must prevent is the accumulation of 'things'. To this end, we must decide and limit exactly what a person is allowed to own, with the rest being owned by the state. We will prohibit the ownership of firearms for private citizens, and limit the ownership of Cars to what people need. Of course, some items are allowed to be owned private citizens. Clothes, ones own home and some basic items for the household are permitted. This will make sure that everyone has only what they need and little else."
 
   SCA_Sloth:0 "Sloth"
-  SCA_Sloth_desc:0 ""
+  SCA_Sloth_desc:0 "The Sin of Sloth is unique from all the others. For it is not caused by any specific actions, but instead total inaction. A sad truth we will have to address is that as the lives of the formerly oppressed improve, they may grow lazy and complacent on their new found prosperity. Seeking large houses, fast cars and needless expenses rather than truly bettering themselves. We must ensure that everyone is able to live comfortably without becoming lazy, and making sure they not only can but will contribute to the collective good."
 
   SCA_The_Guaranteed_Work_Act:0 "The Guaranteed Work Act"
   SCA_The_Guaranteed_Work_Act_desc:0 "In the past, when the next generation has finished their primary and secondary education, they are worried about what the future will hold. Not just of the world, though that is understandable, but their own personal future. While we may never be able to completely remove all fears of the future we can at least alleviate some of that pressure. With this Act, we will make it a legal requirement for everyone to seek either further education or employment once they've reached adulthood, with some government aid to help them along this process. Only those who are physically incapable of seeking work, like the disabled and the sick, or have managed to reach retirement shall be allowed to receive unemployment benefits."
@@ -610,7 +610,7 @@
   SCA_The_Commune_Act_desc:0 ""
 
   SCA_Wrath:0 "Wrath"
-  SCA_Wrath_desc:0 ""
+  SCA_Wrath_desc:0 "The Sin of Wrath is perhaps the most useful of these sins, as much as it pains us to admit such things. Rage and anger are powerful emotions, that leave ruins and devastation in their wake. Sometimes, people continue to seek it out after great tragedies. To fill voids or even because they miss the purpose is can provide. There's nothing wrong with being angry sometimes, it is completely understandable, but it cannot be allowed to tear everything apart. Rather than destroying Wrath like with the other plagues we face, instead it must be filtered and controlled to serve our needs. To be phased out in times of peace and unleashed in times of war."
 
   SCA_The_Civil_Policing_Act:0 "The Civil Policing Act"
   SCA_The_Civil_Policing_Act_desc:0 "All across the world, the police force is supposed to be on the right side of the law. Standing as the first and sometimes only line of defence against lawlessness. Despite their noble purpose, it's easy for police to be corrupted by ignorance and Imperialist Rhetoric. We must make sure this cannot and will not happen., Our nations law enforcement will serve to make sure the laws of the state are enforced and nothing less. We will not use it as a force of intimidation or oppression. No one should have to fear a policeman knocking on their door, and with this act no one ever all. They will exist to protect and serve the people!"
@@ -619,7 +619,7 @@
   SCA_The_Military_Readiness_Act_desc:0 "While the revolution is being built up, we cannot ignore the fact that the word of Damocles hangs above us. As we gain strength, each day we risk the Commonwealth deciding to strike us down before we have even had a chance to fight. But if they try to attack, we must ensue that they will face unrelenting resistance. But for that to be possible, the people will need more than fanaticism, they will need training. To this end, we will ensure that all men and women of this fair nation must serve in our armed forces for one year, or at least in military industry or other forms of manual labour in the case of conscientious co-operators. So no matter who comes, they will face not just a nation but a people ready for war."
 
   SCA_Envy:0 "Envy"
-  SCA_Envy_desc:0 ""
+  SCA_Envy_desc:0 "The Sin of Envy has been a constant threat to our efforts to form a fair and equal society. When one man has plenty, while others other nothing, on the bottom will grow jealous of them. While this is the foundation of any revolution, it also creates hatred and injustice. People will grow envious of advantages, both perceived and genuine. We cannot allow this to tear our society apart. We will create a fair and equal society where everyone is create equal. If we are all treated the same, how can we be envious of each other?"
 
   SCA_The_Non_discrimination_Act:0 "The Non-Discrimination Act"
   SCA_The_Non_discrimination_Act_desc:0 "We cannot hope to create a society of fairness and equality by just hoping things will get better. The issue of race has been around since the days of the first colonies in the region, and it will not go away overnight. But we can make a step in the right direction. With the passing of the Non-Discrimination Act, we will make discrimination and segregation based on race a federal crime, punishable by a fine and even jail time depending on the severity of the incident. Now, we're not fools. You cannot erase such bigotry with an edict, and it will take time for this to be fully implemented. But with enough time and hard work, we can heal this centuries old wound."
@@ -628,7 +628,7 @@
   SCA_The_Emancipation_Act_desc:0 "Though the various minority groups within our borders have gotten legal improvements, these are yet to be made full tangible. And we cannot sit here, hoping it is going to improve on its own. The Emancipation act will help create a fairer and equal society. The Act itself will create a series of funds and agencies dedicated to improving the lives and granting opportunity to those who need it. We will improve funding for schools, build new housing and many many more additions. Once put into the effect, the long process of permanent and peaceful integration will be more than just a dream."
 
   SCA_Pride:0 "Pride"
-  SCA_Pride_desc:0 ""
+  SCA_Pride_desc:0 "The Sin of Pride, like so many others, is complex in its role within the Human Condition. Everyone feel a level of pride in their lives. This can be pride in their work. Pride in victory. Or even pride in creating a family. It's completely understandable and even healthy to celebrate ones achievements. But we cannot allow egotists to rise and create cults of personality around themselves. Whether political or personal. And pride leads to jealously, allowing for injustice to take root. All peoples will have their achievements celebrated, everyone will get fair rewards. Nipping the problem of bloated egos and jealously in the bud."
 
   SCA_The_Equal_Rewards_Act:0 "The Equal Rewards Act"
   SCA_The_Equal_Rewards_Act_desc:0 "While building houses and factories are good steps toward creating a better nation, they matter little if the people work tirelessly for scraps. Even as we patch the holes left by the Imperialists of the past, many still find themselves only earning enough for a single loath of bread even as they work for many hours. We will ensure this will never happen again. With the passing of this act, wages will be standardised across the board. All workers will receive the same wage equivalent to the amount of work they produce. Those who work in more intensive fields, both physically and mentally, will receive more compensation for their efforts. Thus allowing everyone to earn what they deserve, no more no less."
@@ -839,6 +839,16 @@
   SCA_Crush_The_Maritime_Seperatists:0 "Crush The Maritime Seperatists"
   SCA_Crush_The_Maritime_Seperatists_desc:0 ""
 
+  SCA_Crush_The_Secret_Empire:0 "Crush The Secret Empire"
+  SCA_Crush_The_Secret_Empire_desc:0 ""
+
+  SCA_Fight_Against_Futurism:0 "Fight Against Futurism"
+  SCA_Fight_Against_Futurism_desc:0 ""
+
+  SCA_The_Capital_Question:0 "The Capital Question"
+  SCA_The_Capital_Question_desc:0 ""
+  
+
   ##########################
   # TOOLTIPS/FLAGS/COSMETIC/TRAITS/PARTIES
   ##########################
@@ -996,6 +1006,10 @@
 
   SCA_Crush_The_Maritime_Seperatists_tt:0 "\nWe will be able to £GFX_territory_icon core  [MIT.getflag] Maritime owned states once we have defeated them"
 
+  SCA_Crush_The_Secret_Empire_tt:0 "\nWe will be able to £GFX_territory_icon core  [KKK.getflag] Klan owned states once we have defeated them"
+
+  SCA_Dealt_With_Secret_Empire:0 "Dealt with the Secret_Empire"
+
   ##########################
   # TECH
   ##########################
@@ -1098,6 +1112,12 @@
   SCA19title:0 "A Dismissive Letter From Tokyo"
   SCA19desc:0 "" 
   SCA19opta:0 "WHAT!"
+
+  SCA20title:0 "The Capital Question"
+  SCA20desc:0 "" 
+  SCA20opta:0 "New York"
+  SCA20optb:0 "Boston"
+  SCA20optc:0 "Our Current Capital is fine"
 
 
 
