--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8771,6 +8771,31 @@ SAN_an_ADJ:0 "Indian"
  MIT_cn_ADJ:0 "New Englander"
  MIT_an_ADJ:0 "New Englander"
 
+ KKK_ni:0 "White Liberation League"
+ KKK_ni_DEF:0 "The White Liberation League"
+ KKK_ds:0 "White Liberation League"
+ KKK_ds_DEF:0 "The White Liberation League"
+ KKK_rc:0 "White Liberation League"
+ KKK_rc_DEF:0 "The White Liberation League"
+ KKK_an:0 "White Liberation League"
+ KKK_an_DEF:0 "The White Liberation League"
+ KKK_cn:0 "White Liberation League"
+ KKK_cn_DEF:0 "The White Liberation League"
+ KKK_lb:0 "White Liberation League"
+ KKK_lb_DEF:0 "The White Liberation League"
+ KKK_ss:0 "White Liberation League"
+ KKK_ss_DEF:0 "The White Liberation League"
+ KKK_jc:0 "White Liberation League"
+ KKK_jc_DEF:0 "The White Liberation League"
+ KKK_ni_ADJ:0 "Old Dixie"
+ KKK_rc_ADJ:0 "Old Dixie"
+ KKK_lb_ADJ:0 "Old Dixie"
+ KKK_ss_ADJ:0 "Old Dixie"
+ KKK_jc_ADJ:0 "Old Dixie"
+ KKK_ds_ADJ:0 "Old Dixie"
+ KKK_cn_ADJ:0 "Old Dixie"
+ KKK_an_ADJ:0 "Old Dixie"
+
 ###################################
 # TEMPLATE
 ################################### #use the or so help me i will find you #*this not the
