Revert "Revert "Merge branch 'master' into Update_Version_0.3""
This reverts commit d36a3e4a500cd197bee9d19baa0ed427444063be.

--- a/localisation/english/PB_Generic_Decisions_l_english.yml
+++ b/localisation/english/PB_Generic_Decisions_l_english.yml
@@ -146,14 +146,21 @@
   OBW_Has_150_RP_cost_tt:0 "§C150§!£research_points_small"
   OBW_Has_150_RP_cost_tt_blocked:0 "§C150§!£research_points_small"
 
+  PB_Orbit_Wars_AI_Manager:0 "AI Tard Wrangler 1"
+  PB_Orbit_Wars_AI_Manager2:0 "AI Tard Wrangler 2"
   PB_Orbit_Wars_Aeronautic_Research:0 "Conduct a run of Aeronautics Research"
   PB_Orbit_Wars_Attack_Enemy_Satellite:0 "Attack Enemy Satellite"
-  PB_Orbit_Wars_Activate_Combat_Satellite:0 "Activate Combat Satellite"
-  PB_Orbit_Wars_Activate_Combat_Satellite_desc:0 "This will activate our current combat satellite in orbit, if we have one active that has not expended its' abilities."
-  PB_Orbit_Wars_Use_Satellite_Ability:0 "Activate Satellite Ability"
-  PB_Orbit_Wars_Use_Satellite_Ability_desc:0 "This will activate our current non-combat satellite in orbit, if we have one active that has not expended its' abilities."
+  PB_Orbit_Wars_Activate_Combat_Satellite_ENG:0 "Activate Combat Satellite"
+  PB_Orbit_Wars_Activate_Combat_Satellite_ENG_desc:0 "This will activate our current combat satellite in orbit, if we have one active that has not expended its' abilities."
+  PB_Orbit_Wars_Activate_Combat_Satellite_RUS:0 "Activate Combat Satellite"
+  PB_Orbit_Wars_Activate_Combat_Satellite_RUS_desc:0 "This will activate our current combat satellite in orbit, if we have one active that has not expended its' abilities."
+  PB_Orbit_Wars_Use_Satellite_Ability_ENG:0 "Activate Satellite Ability"
+  PB_Orbit_Wars_Use_Satellite_Ability_ENG_desc:0 "This will activate our current non-combat satellite in orbit, if we have one active that has not expended its' abilities."
+  PB_Orbit_Wars_Use_Satellite_Ability_RUS:0 "Activate Satellite Ability"
+  PB_Orbit_Wars_Use_Satellite_Ability_RUS_desc:0 "This will activate our current non-combat satellite in orbit, if we have one active that has not expended its' abilities."
   PB_Orbit_Wars_Use_Additional_Fuel:0 "Burn Additional Fuel Reserves"
-  PB_Orbit_Wars_Launch_Rocket:0 "Initiate Launch"
+  PB_Orbit_Wars_Launch_Rocket_ENG:0 "Initiate Launch"
+  PB_Orbit_Wars_Launch_Rocket_RUS:0 "Initiate Launch"
   PB_Orbit_Wars_Reset_Rocket_Design:0 "Reset Rocket Design"
   PB_Orbit_Wars_Hide_All:0 "Hide All Component Sections"
   PB_Orbit_Wars_Satellite_Orbit_Decay:0 "Active Satellite Orbit Decay"
@@ -334,13 +341,13 @@
   OrbitSuccess.7.b:0 "Tsaritsyn"
   OrbitSuccess.7.c:0 "Moscow"
 
-  OrbitSuccess.7.t:0 "Enemy Orbital Nuclear Strike!"
-  OrbitSuccess.7.d:0 "An enemy satellite has launched an orbital nuclear strike on one of our major cities!\n\nThe attack came with little warning, and while the enemy satellite has seemingly expended its' magazine, it has caused widespread horrific damage."
-  OrbitSuccess.7.a:0 "What?!"
+  OrbitSuccess.8.t:0 "Enemy Orbital Nuclear Strike!"
+  OrbitSuccess.8.d:0 "An enemy satellite has launched an orbital nuclear strike on one of our major cities!\n\nThe attack came with little warning, and while the enemy satellite has seemingly expended its' magazine, it has caused widespread horrific damage."
+  OrbitSuccess.8.a:0 "What?!"
 
-  OrbitSuccess.8.t:0 "Scorched Space Device Activated"
-  OrbitSuccess.8.d:0 "The enemy has activated a scorched space device, destroying nearly every satellite in orbit and denying both sides access. Until the debris has cleared, we will be unable to launch new satellites."
-  OrbitSuccess.8.a:0 "Guess we're out of a job for a bit."
+  OrbitSuccess.9.t:0 "Scorched Space Device Activated"
+  OrbitSuccess.9.d:0 "The enemy has activated a scorched space device, destroying nearly every satellite in orbit and denying both sides access. Until the debris has cleared, we will be unable to launch new satellites."
+  OrbitSuccess.9.a:0 "Guess we're out of a job for a bit."
 
   Orbit.2.t:0 "Guidance Sensor Failed"
   Orbit.2.d:0 "Unfortunately, while we were launching our latest rocket, an unforeseen failure in its design has sent us back to the drawing board.  Apparently, while it was launching, one of our remote pilots attempted to steer it towards its intended target, but a malfunction in the guidance sensor sent it careening towards a nearby forest instead.\n\nAlthough this failure has given us valuable insights in guidance sensor maintenance, it was difficult cleaning up the debris and virtually none of the rocket parts were reusable."
