--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -1010,6 +1010,16 @@
 
   SCA_Dealt_With_Secret_Empire:0 "Dealt with the Secret_Empire"
 
+  SCA_Red_America_2:0 "Second Continental Army"
+  SCA_Red_America_2_DEF:0 "Second Continental Army"
+  SCA_Red_America_2_ADJ:0 "American"
+
+  SCA_President_For_Life_tt:0 "\nThe SCA will no longer be known as the §HContinental Interim Government§!"
+
+  SCA_Butler_Portrait_1:0 "Portrait Option A:\n--------------------------------\n\n\n\n\n\n\n£GFX_SCA_Butler_Portrait_1\n\n\n\n\n\n\n\n--------------------------------"
+  SCA_Butler_Portrait_2:0 "Portrait Option B:\n--------------------------------\n\n\n\n\n\n\n£GFX_SCA_Butler_Portrait_2\n\n\n\n\n\n\n\n--------------------------------"
+  SCA_Butler_Portrait_3:0 "Portrait Option C:\n--------------------------------\n\n\n\n\n\n\n£GFX_SCA_Butler_Portrait_3\n\n\n\n\n\n\n\n--------------------------------"
+
   ##########################
   # TECH
   ##########################
@@ -1118,6 +1128,12 @@
   SCA20opta:0 "New York"
   SCA20optb:0 "Boston"
   SCA20optc:0 "Our Current Capital is fine"
+
+  SCA21title:0 "The American Cromwell"
+  SCA21desc:0 "" 
+  SCA21opta:0 "Portrait Option: A"
+  SCA21optb:0 "Portrait Option: B"
+  SCA21optc:0 "Portrait Option: C"
 
 
 
