Fat SCA and Wild West push

--- a/localisation/english/PB_WWW_l_english.yml
+++ b/localisation/english/PB_WWW_l_english.yml
@@ -67,7 +67,7 @@
   WWW_LAK_Join_Confederacy:0 "Join The Confederacy"
 
   ##########################
-  # FLAGS AND TOOLTIPS
+  # FLAGS AND TOOLTIPS AND TRAITS
   ##########################
 
   WWW_Recently_Declared_War_flag_tt:0 "Current days are: [?WWW_Recently_Declared_War_flag:days|Y0]"
@@ -119,6 +119,9 @@
   TAB_Tier_1_Formed:0 "Has formed the §HGreat Basin Republic§!"
 
   LAK_Confederation:0 "§HConfederacy of Free Tribes§! will be known as the §HConfederation of the First Nations§!"
+
+  trait_NWA_Anarchistic_Fervour:0 "Anarchistic Fervour"
+  trait_NWA_Anarchistic_Fervour_desc:0 "The fires of revolution burn bright amongst the minds of this military committee."
 
 
   ##########################
