--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -23,6 +23,23 @@ PB_AME_Racial_Segregation_desc:0 "Despite the emancipation of slaves in the 1800
 PB_AME_British_Imperial_Confederation:0 "British Imperial Confederation"
 PB_AME_British_Imperial_Confederation_desc:0 "The [AME.GetName] is part of the British Imperial Confederation, the more formal name for the Greater British Empire. As the part of the Confederation, the nation benefits from the Imperial Parliament and the Imperial Economy"
 
+PB_AME_Second_Empire_System:0 "One Empire, Two Systems"
+PB_AME_Second_Empire_System_desc:0 "Legally speaking, the United Commonwealth of America is merely a constituent element of the British Empire. In reality, the United Commonwealth rivals and even exceeds Britain in many regards. This fact was not lost on many, and so over time a policy of coexistence developed between Philadelphia and London. All Commonwealths are equal in the Empire, but America is more equal than others, and we have used this freedom to carve out a splendid little empire within the empire.\n\nFrom the American West Indies to East Africa, from Linconia to Hong Kong, the United Commonwealth has grown from a mere partner state to the dominant economic power in the British Empire. Coexistence is a fickle thing, however, and Britain may do what it feels is necessary to avert the coming American Peril."
+
+PB_AME_Crittenden_Compromise:0 "The Crittenden Compromise"
+PB_AME_Crittenden_Compromise_desc:0 "Following the end of the Southern Rebellion and the signing of the Calhoun-Melbourne Treaty, the Commonwealth was left with a divided, war-torn and militarily occupied South. The Southern Provinces would remain under de-facto military rule until 1838, whereupon new provincial borders were established under the Lincoln-Crittenden Proposal. This proposal was heavily favored by the Southern politicians allowed to run for office, as it sectioned off areas dominanted by free men of color from predominantly white regions.\n\nPolitically convenient at the time, the Crittenden Compromise severely divided the Southern provinces into what were functionally racial armed camps. Freedmen provinces and white provinces frequently engaged in battle, sometimes politically, sometimes literally for influence over the South. In contemporary times, the situation has lead to a series of conflicting segregation and anti-segregation laws across the country. In some extreme cases, Freedmen who could vote in one neighborhood would be arrested for trying to vote in another across the provincial line.\n\nResolving or even just mitigating the situation is exacerbated by the vigiliant gaze of New Dixie and the Southern Secessionists, just waiting for us to act and incite rebellion."
+AME_Crittenden_Compromise_tt:0 "§YWhile this national spirit is active, we will be unable to change our§! §OMinority Rights§! §Ylaws without major pushback from either§! §OFreedmen Culture States§! §Yor§! §OOld Dixie Culture States§!"
+
+PB_AME_Mississippi_Treaties:0 "The Calhoun-Melbourne Treaty"
+PB_AME_Mississippi_Treaties_desc:0 "The Calhoun-Melbourne Treaty officially ended the Southern Rebellion in 1838, allowing the formation of New Dixie and establishing a series of mutual restrictions on both states in an effort to promote peace. The United Commonwealth would not aggressively expand past the Mississippi River, while New Dixie agreed to respect the sovereignty of the Commonwealth's Southern provinces.\n\nWhile the treaty has remained in force since 1838, in reality both sides have actively undermined it since the moment it was signed. The United Commonwealth's filibuster military campaigns in the West still go on, while Ministry One regularly funds Dixie civil rights movements, militant or otherwise. On the inverse, New Dixie quietly funds various white supremacist militias in the Commonwealth, primarily the White League and the Good Ole Boys, the former of which was only sated by their involvement in the Nicaraguan Police Action in 1911.\n\nThis uneasy peace remains, but should it be openly defied, it may lead to a resumption of the Southern War. "
+PB_AME_Mississippi_Treaties_tt:0 "§YUnder the stipulations of the treaties, the United Commonwealth cannot expand across the Mississippi or risk a resumption of hostilities with New Dixie.§!"
+
+PB_AME_Iberian_Campaign_Legacy:0 "Legacy of the Iberian Campaign"
+PB_AME_Iberian_Campaign_Legacy_desc:0 "The United Commonwealth fought for the first time under their own flag during the Iberian Campaign of the Great War. Though we faced heavy losses, the war brought out a sense of patriotism in America that never quite faded. For the first time, America had stood alone from the British Empire where it mattered, and that romantic notion remains in the cultural zeitgeist.\n\nIn more practical terms, the challenges of the Iberian Campaign forged the Royal American Armed Forces into a modern, innovative military. While the Tommies across the Atlantic might represent Britain's boutique army, America's army is anything but, and it will find any chance it can to prove it."
+PB_AME_Dixie_Divide:0 "The Dixie Divide"
+PB_AME_Dixie_Divide_desc:0 "In many ways, America remains deeply divided between North and South. The more liberal North, with its’ greater industry, has dominated the South since the Southern Rebellion. With poverty rampant in the South and the increasing social liberalization of the nation, tension in the South has reached a fever pitch."
+PB_AME_Racial_Segregation:0 "Racial Segregation"
+PB_AME_Racial_Segregation_desc:0 "Despite the emancipation of slaves in the 1800s, the Commonwealth still maintains many segregation laws, even in the North. Due to this, the Commonwealth’s Home Army similarly remains segregated, making recruiting difficult."
 
 
 PB_AME_Protectionist_Recovery_1:0 "Gradual Recovery from the Crisis"
@@ -42,7 +59,7 @@ AME_libtard_new_dawn_over_philly:0 "New Economic Resurgence"
 # GOALS
 ##########################
 
-PB_AME_The_Dawes_Ministry:0 "The Dawes Ministry"
+PB_AME_The_Dawes_Ministry:0 "The Coolidge Ministry"
 PB_AME_Double_the_Segregation:0 "Double Down on Segregation"
 PB_AME_Maintain_Crittenden_Neutrality:0 "Maintain Crittenden Neutrality"
 PB_AME_Adress_the_Segregation_Issue:0 "Adress the Segregation Issue"
@@ -517,6 +534,31 @@ AME_the_aberhard_administration_desc:0 ""
 # EVENTS
 ##########################
 
+Unicom.1.t:0 "The Automation Crisis hits America"
+Unicom.1.d:0 "PLACEHOLDER The Automation Crisis in the United Kingdom begins, and the economic aftershocks strike the United Commonwealth. Following similar directives from Edison Corporate, various EIEC ventures in the UC begin shuttering human managed operations in favor of semi-automated machines. The sudden jolt of unemployment causes a shock to the economy, forcing several banks to temporarily close as unemployed workers attempt to withdraw savings in droves."
+Unicom.1.a:0 "Get Edison representatives on the phone. Now."
+
+Unicom.2.t:0 "Edison's Counterattack"
+Unicom.2.d:0 "PLACEHOLDER Meeting with Edison representatives, Prime Minister Coolidge demands that they slow down their rate of layoffs or risk government action. The EIEC representatives inform him, in no uncertain terms, that action taken against the company could lead to a withdrawal from government contracts. In particular, Charles Edison, attending the meeting via telescreen, points out that Coolidge's heart augmentation is Edison brand. Caught between a rock and a hard place, the Prime Minister is forced to stand down and allow the EIEC to continue."
+Unicom.2.a:0 "Smug bastards..."
+
+Unicom.3.t:0 "Anti-Automation Riots"
+Unicom.3.d:0 "PLACEHOLDER As the EIEC layoffs continue, nearly a million people take to the streets in the Midwest and New Jersey to protest Edison Electric. These protests frequently escalate into rioting, leading to mass unrest and the destruction of a number of expensive machines. The Royal American Mounted Police and Provincial Guards are deployed to contain things, but it becomes clear that things are escalating rapidly."
+Unicom.3.a:0 "Deploy the Mounties, get these people off the streets."
+
+Unicom.4.t:0 "The American Legion Mobilizes"
+Unicom.4.d:0 "PLACEHOLDER The largest riots have calmed, however the veterans of the country have been disproportionately affected by the unemployment spike. Members of the American Legion, a veterans group created after the Great War, have begun meeting and announced their plan to approach the Coolidge administration. Veterans were promised sign-on bonuses during the Great War, to be delivered over a period of ten to twenty years based on service period. The Legion seeks to have these periods shortened, and to allow veterans to cash out the bonuses in these funds to better support themselves while unemployment is high."
+Unicom.4.a:0 "Let's hear them out, at least."
+
+Unicom.5.t:0 "General Butler endorses the Legion"
+Unicom.5.d:0 "PLACEHOLDER General Smedley Butler has spoken out in support of the American Legion's proposal, arguing that the Commonwealth has a duty to support the veterans of the war. Despite the administration's concerns, Coolidge has offered to meet with Butler to discuss the prospect of working together to alleviate the veteran bonus concern. This idea is supported by Arthur Currie, another veteran of the Great War and upstart in the Unionist Party. On the other hand, Charles Hughes of the party's fiscal conservatives argues that the payout may be more than the Commonwealth's liquid reserves can accomodate."
+Unicom.5.a:0 "Tell him to keep his nose out of politics."
+Unicom.5.b:0 "Butler and Currie are reasonable men, let's talk."
+
+Unicom.6.t:0 "The American Legion Arrives in Philadelphia"
+Unicom.6.d:0 "PLACEHOLDER The American Legion delegation has arrived in Philadelphia, but with significant reinforcement. Nearly 20,000 demonstrators have flooded into the capital to support the delegation. While they generally aren't well armed, the RAMP have noted that many have significant wartime augmentation that could pose a threat to the public. Coolidge, now surrounded in his own country's capital by thousands of unemployed and angry veterans, now has to decide how to address the crisis. Routing the protestors would be deeply unpopular, but with the right media spin could be portrayed as defeating troublemakers. On the other hand, capitulation would make Coolidge look weak to the public and the Empire, and the UC may not be able to effectively foot the bill required. The third option, to negotiate, may be the best path for preventing bloodshed, but will require some compromises on both sides. "
+Unicom.6.a:0 "A decision must be made, and soon."
+
 ##########################
 # TOOLTIPS
 ##########################
@@ -526,6 +568,9 @@ POLITICS_CHARLES_G_DAWES_DESC:0 "§YBorn§!: 27/8/1865 \n\n§YCharles Gates Dawe
 PB_AME_START_TT_1:0 "§YThe Dawes administration has been consistently troubled by the uppity coloured provinces since the start. If we seek to placate a certain electorate down in the South, the Dawes ministry will have to double down on segregation and protect the provincial autonomy to keep blacks and whites seperate§!."
 PB_AME_START_TT_2:0 "§YThe tension down in Dixie is simply unsolveable for a single administration. It is better to keep playing by the book and respect the Crittenden compromise than to upset the balance in the provinces§!."
 PB_AME_START_TT_3:0 "§YThe Crittenden compromise has brought severe injustice to all already unjust world. The segregation of black and white men along provincial lines, highlighted by the differences in federal funding and development, must end here. If we do not challenge segregation, then who will§!?"
+
+tooltip_AME_No_Butler_Support:0 "§YWithout Butler's support, we may have greater difficulty negotiating terms with the Legion.§!"
+tooltip_AME_Bonus_Brigade_Choice_Available_tt:0 "§YWe can now decide how we wish to tackle the Bonus Brigade Crisis§!"
 
 ##########################
 # PUPPET AUTONOMY
